tests/fixtures/errors/crossfile_dep.z
# Companion unit for crossfile_err: the violation lives HERE, so the
# diagnostic must name THIS file (nodeid -> fsno segment mapping), not the
# main unit. Standalone it fails with the same single E0200.
depwork: function {} out u64 is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    g: m.get key: "a".string
    m.set key: "b".string value: "y".string
    match (
        g
    ) case some then {
        print g
    } case none then {}
    return m.length
}
